began about, need to convert css to scss first

--- a/src/index.html
+++ b/src/index.html
@@ -48,27 +48,27 @@
     <!--------- ABOUT SECTION --------->
     <!--------------------------------->
 
-    <section class="about" id="about">
-        <div class="about-header">
+    <!-- <section class="about" id="about">
+        <div class="about__header">
             <div class="joel">
-                <div class="joel-curve"></div>
-                <div class="joel-infos">
-                    <img src="./assets/images/me.jpg" alt="" class="joel-img" />
-                    <div class="joel-info">
-                        <div class="instructor__col">
-                            <div class="instructor__info">
+                <div class="joel__curve"></div>
+                <div class="joel__infos">
+                    <img src="./assets/images/me.jpg" alt="" class="joel__img" />
+                    <div class="joel__info">
+                        <div class="joel__col">
+                            <div class="joel__col--info">
                                 <i class="uil uil-usd-circle"></i>
                                 <span>10+ Years Sales and Service</span>
                             </div>
-                            <div class="instructor__info">
+                            <div class="joel__col--info">
                                 <i class="uil uil-rocket"></i>
                                 <span>10+ Years Leadership</span>
                             </div>
-                            <div class="instructor__info">
+                            <div class="joel__col--info">
                                 <i class="uil uil-money-bill"></i>
                                 <span>8 Years Banking and Finance</span>
                             </div>
-                            <div class="instructor__info">
+                            <div class="joel__col--info">
                                 <i class="uil uil-desktop-cloud-alt"></i>
                                 <span>Passion for Creative Development</span>
                             </div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <script src="assets/js/config.js"></script>
     <script src="assets/js/threeBg.js"></script>
 </body>
