converted scss, need to style about

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 
     <canvas class="webgl"></canvas>
     <section class="landing-container ">
-        <h1 class="landing-container--title text-white ff-sans uppercase letter-spacing-2">Joel Borofsky</h1>
-        <h2 class="landing-container--subtitle text-white ff-sans uppercase letter-spacing-3">ui/ux focused</h2>
-        <h2 class="landing-container--subtitle text-white ff-sans uppercase letter-spacing-3">Creative Developer</h1>
+        <h1 class="landing-container--title  ff-sans uppercase letter-spacing-2">Joel Borofsky</h1>
+        <h2 class="landing-container--subtitle  ff-sans uppercase letter-spacing-3">ui/ux focused</h2>
+        <h2 class="landing-container--subtitle  ff-sans uppercase letter-spacing-3">Creative Developer</h1>
     </section>
     <section class="social-media-container">
         <div class="contact-container" style="margin-top: 5rem">
@@ -48,7 +48,7 @@
     <!--------- ABOUT SECTION --------->
     <!--------------------------------->
 
-    <!-- <section class="about" id="about">
+    <section class="about" id="about">
         <div class="about__header">
             <div class="joel">
                 <div class="joel__curve"></div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <script src="assets/js/config.js"></script>
     <script src="assets/js/threeBg.js"></script>
 </body>
