--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,8 @@
     <!--------- ABOUT SECTION --------->
     <!--------------------------------->
 
-    <section class="about" id="about">
+    <section class="about ff-sans-main" id="about">
+
         <div class="about__header">
             <div class="joel">
                 <div class="joel__curve"></div>
@@ -76,6 +77,61 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="about__timeline">
+            <p class="about__timeline--content" id="shadedImage">
+                <span class="gradient-text">2013 | </span> I began my career in banking and finance working for Wells
+                Fargo in Raleigh, NC. Through hard work and great customer
+                service, I was able to move to New York in 2016 as a Banker. While in New York I filled the roles of
+                Banker I, Service
+                Manager, Banker II, and Brokerage Associate (earning a Series 6 and 63).
+            </p>
+            <p class="about__timeline--content" id="shadedImage">
+                <span class="gradient-text">2019 | </span>Helped found SellSafe, LLC in Wichita, KS. A Software as a
+                Service company, we sought to develop an app that would help small
+                businesses make better-informed credit decisions. I helped secure initial funding, created the pitch
+                deck, and worked
+                with developers on creating a semi-functional prototype. It’s here that I discovered an interest in
+                UI/UX.
+            </p>
+            <p class="about__timeline--content" id="shadedImage">
+                <span class="gradient-text">2020 | </span> Due to COVID putting a halt to investments, I sought out
+                employment that would also give me some free time to help with
+                family in Wichita. I was hired at Whole Foods and quickly was moved to a supervisor over customer
+                service. During that
+                time I also began to look more into software development. I signed up for Codecademy and I realized two
+                things: 1 – I
+                wanted to code and 2 – I had no idea what I was doing.
+            </p>
+            <p class="about__timeline--content" id="shadedImage">
+                <span class="gradient-text">2021 | </span> I joined the coding bootcamp Coding Temple in October with
+                the intention of going into data science. This seemed logical
+                considering my background in finance and my love of data. However, while we only spent 3 of the 10 weeks
+                on frontend
+                development and 0 on UI/UX, I fell in love with frontend development. After graduating in January 2022 I
+                knew only the
+                bare minimum of how to code, but I knew one thing; I wanted to be a creative developer.
+            </p>
+            <p class="about__timeline--content" id="shadedImage">
+                <span class="gradient-text">PRESENT | </span> Since finishing bootcamp I’ve thrown myself into learning
+                the basics (HTML/CSS/JS), looking over MDN documentation until
+                the wee hours of the morning, and constantly rebuilding my own website as a way to learn. I’ve learned
+                WebGL, Blender,
+                React, React-Three-Fiber, and so on. While looking for work I’ve been throwing myself into learning,
+                reading through
+                ThreeJS’ amazing documentation, taking Bruno Simon’s Threejs-Journey course, moving away from tutorials
+                and taking what
+                I’ve learned and building my own stuff.</span>
+            </p>
+            <p class="about__timeline--content" id="shadedImage">
+                <span class="gradient-text">FUTURE | </span> The above 5 sections give a glimpse into my history, most
+                of it centered around work. Each section describes how I got
+                to where I am, how I drew off those experiences to move forward. At some point this 6th section will
+                need to be updated
+                with my first development job and how that company had an impact on me and helped to propel me forward.
+                <span class="gradient-text">Will your
+                company be the 6th section?</span> 
+            </p>
         </div>
     </section>
     <script src="assets/js/config.js"></script>
