finished styling skills section, fully responsive

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,9 @@
                 Fargo in Raleigh, NC. Through hard work and great customer
                 service, I was able to move to New York in 2016 as a Banker. While in New York I filled the roles of
                 Banker I, Service
-                Manager, Banker II, and Brokerage Associate (earning a Series 6 and 63).
+                Manager, Banker II, and Brokerage Associate (earning a Series 6 and 63). My branch
+                was located next to one of our developer hubs. Talking to the developers about
+                our software and how to improve it began to pique my interest in coding.
             </p>
             <p class="about__timeline--content" id="shadedImage">
                 <span class="gradient-text">2019 | </span>Helped found SellSafe, LLC in Wichita, KS. A Software as a
@@ -124,14 +126,36 @@
                 I’ve learned and building my own stuff.</span>
             </p>
             <p class="about__timeline--content" id="shadedImage">
-                <span class="gradient-text">FUTURE | </span> The above 5 sections give a glimpse into my history, most
-                of it centered around work. Each section describes how I got
-                to where I am, how I drew off those experiences to move forward. At some point this 6th section will
-                need to be updated
-                with my first development job and how that company had an impact on me and helped to propel me forward.
-                <span class="gradient-text">Will your
-                company be the 6th section?</span> 
+                <span class="gradient-text">WILL YOUR COMPANY FILL THIS SECTION?</span> 
             </p>
+        </div>
+    </section>
+    <section class="skills">
+        <div class="skills__personal-header">
+            <span class="skills__personal-header--title">Who I Am</span>
+        </div>
+        <div class="skills__text skills__text--left">
+            Sales&nbsp;&nbsp;&nbsp;Creative &nbsp;&nbsp;&nbsp;Fast Learner
+            &nbsp;&nbsp;&nbsp; Compassionate &nbsp;&nbsp;&nbsp; Energetic 
+            &nbsp;&nbsp;&nbsp; Customer Service&nbsp;&nbsp;&nbsp; Leader
+            &nbsp;&nbsp;&nbsp; Xenophilic&nbsp;&nbsp;&nbsp;Curious
+            Team Player&nbsp;&nbsp;&nbsp;Listener &nbsp;&nbsp;&nbsp;Presenter
+            &nbsp;&nbsp;&nbsp;Adventurous &nbsp;&nbsp;&nbsp;Welcoming
+            &nbsp;&nbsp;&nbsp;Permanent Student &nbsp;&nbsp;&nbsp; Personable
+            &nbsp;&nbsp;&nbsp; Empathetic &nbsp;&nbsp;&nbsp; Helper
+        </div>
+        <div class="skills__tech-header">
+            <span class="skills__tech-header--title">Tech I Work With</span>
+        </div>
+        <div class="skills__text skills__text--right">
+            HTML&nbsp;&nbsp;&nbsp; WebGL&nbsp;&nbsp;&nbsp;
+            CSS&nbsp;&nbsp;&nbsp; JavaScript&nbsp;&nbsp;&nbsp; React
+            &nbsp;&nbsp;&nbsp; Firebase&nbsp;&nbsp;&nbsp; Parcel&nbsp;&nbsp;&nbsp;
+            Threejs&nbsp;&nbsp;&nbsp; glsl&nbsp;&nbsp;&nbsp;
+            SASS&nbsp;&nbsp;&nbsp; GitHub&nbsp;&nbsp;&nbsp; Hostinger&nbsp;&nbsp;&nbsp;
+            React Router &nbsp;&nbsp;&nbsp; TailwindCSS &nbsp;&nbsp;&nbsp; React Fonts &nbsp;&nbsp;&nbsp;
+            Stylized Components &nbsp;&nbsp;&nbsp; GSAP &nbsp;&nbsp;&nbsp; Blender &nbsp;&nbsp;&nbsp; Figma 
+            Vercel &nbsp;&nbsp;&nbsp; dat.GUI
         </div>
     </section>
     <script src="assets/js/config.js"></script>
