reorganized image files

--- a/src/index.html
+++ b/src/index.html
@@ -136,13 +136,13 @@
         </div>
         <div class="skills__text skills__text--left">
             Sales&nbsp;&nbsp;&nbsp;Creative &nbsp;&nbsp;&nbsp;Fast Learner
-            &nbsp;&nbsp;&nbsp; Compassionate &nbsp;&nbsp;&nbsp; Energetic 
+            &nbsp;&nbsp;&nbsp; Compassionate &nbsp;&nbsp;&nbsp;  Curious
             &nbsp;&nbsp;&nbsp; Customer Service&nbsp;&nbsp;&nbsp; Leader
-            &nbsp;&nbsp;&nbsp; Xenophilic&nbsp;&nbsp;&nbsp;Curious
+            &nbsp;&nbsp;&nbsp; Xenophilic&nbsp;&nbsp;&nbsp;Energetic
             Team Player&nbsp;&nbsp;&nbsp;Listener &nbsp;&nbsp;&nbsp;Presenter
             &nbsp;&nbsp;&nbsp;Adventurous &nbsp;&nbsp;&nbsp;Welcoming
             &nbsp;&nbsp;&nbsp;Permanent Student &nbsp;&nbsp;&nbsp; Personable
-            &nbsp;&nbsp;&nbsp; Empathetic &nbsp;&nbsp;&nbsp; Helper
+            &nbsp;&nbsp;&nbsp; Empathetic &nbsp;&nbsp;&nbsp; Helper &nbsp;&nbsp;&nbsp; Banker
         </div>
         <div class="skills__tech-header">
             <span class="skills__tech-header--title">Tech I Work With</span>
