added contact button on about

--- a/src/index.html
+++ b/src/index.html
@@ -129,6 +129,9 @@
                 <span class="gradient-text">WILL YOUR COMPANY FILL THIS SECTION?</span>
             </p>
         </div>
+        <div class="about__container">
+            <a href="#contact"><button class="about__container--button ff-sans-main"><span>Contact</span></button></a>
+        </div>
     </section>
 
     <!--------------------------------->
