completed faq, responsive

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,8 @@
                     <p class="projects__content--description">
                         <span>A build based on Kevin Powell's Space Travel challenge.</span>
                         <span>The goal was more to learn how to build up a design system, build a website using
-                            a mobile first approach, and create a site that's more accessible. I changed the color
+                            a mobile first approach, and create a site that's more accessible. I changed the
+                            color
                             scheme as well as some pages, as well as created a sci-fi background just for fun.
                         </span>
                     </p>
@@ -304,8 +305,130 @@
         </div>
     </section>
 
+    <!--------------------------------->
+    <!---------- FAQ SECTION ---------->
+    <!--------------------------------->
+
+    <section class="faq" id="faq">
+        <div class="faq__wrap">
+            <div class="faq__wrap--title">FAQ</div>
+            <div class="faq__wrap--subtitle">Have any questions?</div>
+            <div class="question">
+                <div class="question__wrap">
+                    <div class="question__status"></div>
+                    <h3 tabindex="0">Why doesn't this site have a navbar?</h3>
+                </div>
+                <div class="question__answer">
+                    <p>
+                        It's a simple portfolio site that's meant to show off design. There's not a lot 
+                        here to get through and it's easy to scroll. 
+                    </p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="question__wrap">
+                    <div class="question__status"></div>
+                    <h3 tabindex="0">Can you make a site like this for me?</h3>
+                </div>
+                <div class="question__answer">
+                    <p>
+                        My knowledge and experience are limited, but I can build out basic portfolio sites 
+                        like this one. 
+                    </p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="question__wrap">
+                    <div class="question__status"></div>
+                    <h3 tabindex="0">How much does it cost to build me a site?
+                    </h3>
+                </div>
+                <div class="question__answer">
+                    <p>
+                        It just depends on what you're looking for. Adding 3D elements (like my header)
+                        will always add to the cost because of the coding involved. If you want a regular 2D
+                        site that will still look stylish (don't sleep on the CSS!) and provide all the assets
+                        (pictures, logo, etc) then the cost will be a few hundred dollars. The more work I have to 
+                        do to build a site, the more you can expect to pay.
+                    </p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="question__wrap">
+                    <div class="question__status"></div>
+                    <h3 tabindex="0">We're a small business, can you build us an ecommerce site?
+                    </h3>
+                </div>
+                <div class="question__answer">
+                    <p>
+                        At this time my skillset isn't where I feel comfortable doing this as a freelance project. 
+                        I'd be more than willing to team up with an experienced developer and handle the design and front-facing 
+                        aspects of the site.  
+                    </p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="question__wrap">
+                    <div class="question__status"></div>
+                    <h3 tabindex="0">"Hi, I'm with [_______] company/org/group/etc, we like your design! Can you build 
+                        us a website for free? We'll give you exposure!"
+                    </h3>
+                </div>
+                <div class="question__answer">
+                    <p>
+                        No.
+                    </p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="question__wrap">
+                    <div class="question__status"></div>
+                    <h3 tabindex="0">Why did you get into development?
+                    </h3>
+                </div>
+                <div class="question__answer">
+                    <p>
+                        I originally attended a coding bootcamp to get into data science. I learned Python, Flask, and Pandas but 
+                        haven't worked with them since my bootcamp. Being able to design sites ignited something in me 
+                        that only grows stronger every day. 
+                    </p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="question__wrap">
+                    <div class="question__status"></div>
+                    <h3 tabindex="0">What other coding languages do you know?
+                    </h3>
+                </div>
+                <div class="question__answer">
+                    <p>
+                        I've touched Python and Typscript. I also learned PostgreSQL and ElephantSQL. 
+                        In my spare time I picked up Excel (not really a coding, but it counts for 
+                        back end work). 
+                    </p>
+                </div>
+            </div>
+            <div class="question">
+                <div class="question__wrap">
+                    <div class="question__status"></div>
+                    <h3 tabindex="0">What else do you do besides build websites and apps?
+                    </h3>
+                </div>
+                <div class="question__answer">
+                    <p>
+                        When I have the time and money I love to travel. I'll do the tourist thing for a day or two, 
+                        but I prefer to spend time among the locals. My favorite place so far has been Zihuatanejo, MX, though 
+                        Krakow, Poland comes close. I also play games, but mostly strategy cames and, of course, Cities: Skylines. 
+                        Just something about design that attracts me to the game. 
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="assets/js/config.js"></script>
     <script src="assets/js/threeBg.js"></script>
+    <script src="assets/js/faq.js"></script>
 </body>
 
 </html>
