--- a/src/index.html
+++ b/src/index.html
@@ -517,8 +517,16 @@
                             pathLength="1" fill="none" stroke="#d2042d" />
                     </svg>
                 </a>
-                <a href="hhttps://github.com/BorofskyDev" target="_blank" title="GitHub" class="coolFunnyLink">
+                <a href="https://github.com/BorofskyDev" target="_blank" title="GitHub" class="coolFunnyLink">
                     <span>GitHub</span>
+                    <svg width="100%" height="9" viewBox="0 0 101 9">
+                        <path
+                            d="M.426 1.973C4.144 1.567 17.77-.514 21.443 1.48 24.296 3.026 24.844 4.627 27.5 7c3.075 2.748 6.642-4.141 10.066-4.688 7.517-1.2 13.237 5.425 17.59 2.745C58.5 3 60.464-1.786 66 2c1.996 1.365 3.174 3.737 5.286 4.41 5.423 1.727 25.34-7.981 29.14-1.294"
+                            pathLength="1" fill="none" stroke="#d2042d" />
+                    </svg>
+                </a>
+                <a href="https://codepen.io/borofskyDev" target="_blank" title="GitHub" class="coolFunnyLink">
+                    <span>CodePen</span>
                     <svg width="100%" height="9" viewBox="0 0 101 9">
                         <path
                             d="M.426 1.973C4.144 1.567 17.77-.514 21.443 1.48 24.296 3.026 24.844 4.627 27.5 7c3.075 2.748 6.642-4.141 10.066-4.688 7.517-1.2 13.237 5.425 17.59 2.745C58.5 3 60.464-1.786 66 2c1.996 1.365 3.174 3.737 5.286 4.41 5.423 1.727 25.34-7.981 29.14-1.294"
@@ -528,9 +536,9 @@
             </div>
         </div>
         <div class="contact__footer">
-            <div class="contact__footer-link">A borofskyDev Experience</div>
-            <div class="contact__footer-link">Copyright©2022</div>
-            <div class="contact__footer-link">May the force be with you</div>
+            <div class="contact__footer--link">A borofskyDev Experience</div>
+            <div class="contact__footer--link">Copyright©2022</div>
+            <div class="contact__footer--link">May the force be with you</div>
             <a href="https://www.flaticon.com/free-icons/astronaut-helmet" title="astronaut helmet icons"
                 target="_blank" style="font-size: 10px;">Astronaut helmet icons
                 created by Graphix's Art - Flaticon</a>
